+ Pushed latest bulletin

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "chroma-js": "^2.4.2",
     "dayjs": "^1.11.2",
     "embla-carousel-react": "^7.0.5",
     "formik": "^2.2.9",
@@ -28,6 +29,7 @@
     "highcharts-react-official": "^3.1.0",
     "http-server": "^14.1.1",
     "i": "^0.3.7",
+    "js-file-download": "^0.4.12",
     "leaflet": "^1.8.0",
     "mui-datatables": "^4.2.2",
     "notistack": "^2.0.5",
