--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
+    "react-to-pdf": "^0.0.14",
     "react-zoom-pan-pinch": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
